# subselect

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
documentation/: methods.tex  references.bib
documentation/historical_paper_outputs/: README.md  assess_cmip6_pr_mon_perf_metrics_all_seasons_greece.xlsx  assess_cmip6_psl_mon_perf_metrics_all_seasons_greece.xlsx  assess_cmip6_tas_mon_perf_metrics_all_seasons_greece.xlsx  assess_cmip6_tasmax_mon_perf_metrics_all_seasons_greece.xlsx
legacy/: LEGACY.md
papers/: README.md
scripts/: build_corrected_regression_fixtures.py  composite_taylor_explore.py  cropping_review.py  m5_cropping_review.py  m9_cell_map.md  regenerate_paper_figures.py
scripts/archive/: README.md  m9_capture_truth.py  m9_capture_truth_all.py  m9_ssim_diff.py  m9_visual_diff_report.py
subselect/: __init__.py  __main__.py  cache.py  compute.py  compute_global.py  config.py  geom.py  independence.py  io.py  optimize.py  performance.py  profile_signals.py  render.py  spread.py  state.py
subselect/viz/: __init__.py  _country_bootstrap.py  _data_adapters.py  country_profile.py  independence_figs.py  performance_figs.py  spread_figs.py  taylor.py
subselection_paper/: subselection_paper.tex
tests/: conftest.py  test_cache.py  test_config.py  test_geom.py  test_io.py  test_performance_units.py  test_regression_corrected.py  test_regression_greece.py  test_smoke.py
tests/fixtures/greece/: assess_cmip6_composite_HMperf_greece.xlsx  assess_long_term_change_spread_greece.xlsx  assess_long_term_spread_greece.xlsx  models35.txt
tests/fixtures/regression_corrected/: change_signals.parquet  composite_hps.parquet  composite_hps_full.parquet  observed_std_dev.parquet  per_variable_metrics_pr.parquet  per_variable_metrics_psl.parquet  per_variable_metrics_tas.parquet  per_variable_metrics_tasmax.parquet
